CDC-118: Fixed uneven space in legend causing a weird layout to be displayed

--- a/packages/muze/src/muze.scss
+++ b/packages/muze/src/muze.scss
@@ -7,7 +7,7 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     line-height: 1.42857143;
     color: #333;
-    background-color: #fff;
+    background-color: transparent;
     margin: 0;
 
     * {
